src/test/resources/purescript_examples/passing/ShadowedTCOLet.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('f')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('x')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('y')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('z')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' \n  ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(ValueDeclaration)
                PsiElement(identifier)('f')
                PsiElement(whitespace)(' ')
                PureASTWrapperElement(Binder)
                  PureASTWrapperElement(NumberBinder)
                    PsiElement(natural)('1')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Binder)
                  PureASTWrapperElement(NumberBinder)
                    PsiElement(natural)('2')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Binder)
                  PureASTWrapperElement(NumberBinder)
                    PsiElement(natural)('3')
                    PsiElement(whitespace)(' ')
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PureASTWrapperElement(Value)
                  PureASTWrapperElement(PrefixValue)
                    PureASTWrapperElement(NumericLiteral)
                      PsiElement(natural)('1')
                      PsiElement(whitespace)(' \n  ')
              PsiElement(in)('in')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('f')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('x')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('z')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PsiElement(identifier)('y')
                      PsiElement(whitespace)('\n  \n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(IdentInfix)
            PureASTWrapperElement(Qualified)
              PsiElement(operator)('$')
              PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('show')
                  PsiElement(whitespace)(' ')
            PureASTWrapperElement(IdentInfix)
              PureASTWrapperElement(Qualified)
                PsiElement(operator)('$')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('f')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(NumericLiteral)
                  PsiElement(natural)('1')
                  PsiElement(whitespace)(' ')
                PureASTWrapperElement(NumericLiteral)
                  PsiElement(natural)('3')
                  PsiElement(whitespace)(' ')
                PureASTWrapperElement(NumericLiteral)
                  PsiElement(natural)('2')
                  PsiElement(whitespace)('\n')
